fix(security): harden JWT authentication and CORS configuration
- add validation for login credentials and structured 401/403 JSON responses
- tighten allowed CORS origins, headers, and methods
- align role authorities with Spring Security and improve JWT validation/logging
- update security configuration tests